feat: chat api
